# slam-handbook-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_ja.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
data/: README.md
part1_foundations/ch01_factor_graphs/: 01_factor_graph_basics.ipynb  02_nonlinear_slam.ipynb  03_sparsity_and_elimination.ipynb
part1_foundations/ch02_state_representations/: 01_rotations_and_poses.ipynb  02_lie_group_optimization.ipynb  03_continuous_trajectories.ipynb
part1_foundations/ch03_outlier_robustness/: 01_ransac_and_robust_losses.ipynb
part1_foundations/ch04_differentiable_optimization/: 01_differentiable_least_squares.ipynb
part1_foundations/ch05_dense_maps/: 01_occupancy_and_distance_fields.ipynb
part1_foundations/ch06_certifiable_solvers/: 01_sdp_relaxation_and_sesync.ipynb
part2_practice/ch07_visual_slam/: 01_camera_and_epipolar.ipynb
part2_practice/ch08_lidar_slam/: 01_icp_and_scan_matching.ipynb
part2_practice/ch09_radar_slam/: 01_radar_odometry.ipynb
part2_practice/ch10_event_slam/: 01_event_camera_basics.ipynb
part2_practice/ch11_inertial_odometry/: 01_imu_preintegration.ipynb
part2_practice/ch12_leg_odometry/: 01_legged_robot_kinematics.ipynb
part3_spatial_ai/ch13_deep_learning_slam/: 01_learned_features_and_depth.ipynb
part3_spatial_ai/ch14_differentiable_rendering/: 01_nerf_and_gaussian_splatting.ipynb
tests/: test_factor_graph.py  test_geometry.py  test_lie_groups.py  test_plotting.py
utils/: factor_graph.py  geometry.py  lie_groups.py  plotting.py
(+4 files in other folders)
