[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-handbook-python"
version = "0.1.0"
description = "SLAM Handbookの内容をPythonで学ぶためのハンズオン教材"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.14",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "sympy>=1.12",
    "opencv-python>=4.8",
    "open3d>=0.17",
    "networkx>=3.1",
]

[tool.setuptools.packages.find]
include = ["utils*"]
